--- a/operator/Makefile
+++ b/operator/Makefile
@@ -61,7 +61,7 @@ generate: controller-gen
 	$(CONTROLLER_GEN) object:headerFile=./hack/boilerplate.go.txt paths="./..."
 
 # Build the docker image
-docker-build: go-generate test
+docker-build: generate fmt vet manifests go-generate
 	docker build . -t ${IMG}
 
 # Push the docker image
