--- a/.travis.yml
+++ b/.travis.yml
@@ -90,3 +90,12 @@ jobs:
       script:
         - make docker-build
         - make docker-push
+    - service:
+        - docker
+      stage: build
+      name: operator
+      install:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      script:
+        - docker build . -t kappstaging/dashboard:latest
+        - docker push kappstaging/dashboard:latest
