--- a/controller/config/samples/core_v1alpha1_bookinfo.yaml
+++ b/controller/config/samples/core_v1alpha1_bookinfo.yaml
@@ -208,6 +208,66 @@ spec:
     periodSeconds: 5
 ---
 apiVersion: core.kapp.dev/v1alpha1
+kind: ComponentPlugin
+metadata:
+  name: http-health-probe
+spec:
+  src: |
+    function addProbesForContainer(container) {
+      var config = getConfig();
+
+      if (!config) {
+        return
+      }
+
+      var probe = {
+        httpGet: {
+          path: "/",
+          port: config.port
+        }
+      }
+
+      container.readinessProbe = probe;
+      container.livenessProbe = probe;
+
+      if (config.initialDelaySeconds) {
+        container.readinessProbe.initialDelaySeconds = config.initialDelaySeconds;
+        container.livenessProbe.initialDelaySeconds = config.initialDelaySeconds;
+      }
+
+      if (config.periodSeconds) {
+        container.readinessProbe.periodSeconds = config.periodSeconds;
+        container.livenessProbe.periodSeconds = config.periodSeconds;
+      }
+    }
+
+    function AfterPodTemplateGeneration(pod) {
+      var containers = pod.spec.containers;
+      containers.forEach(addProbesForContainer)
+      return pod;
+    }
+  configSchema:
+    type: object
+    properties:
+      port:
+        type: number
+      initialDelaySeconds:
+        type: number
+      periodSeconds:
+        type: number
+---
+apiVersion: core.kapp.dev/v1alpha1
+kind: ComponentPluginBinding
+metadata:
+  name: productpage-http-health-probe
+  namespace: kapp-bookinfo
+spec:
+  pluginName:  http-health-probe
+  componentName: productpage
+  config:
+    port: 9080
+---
+apiVersion: core.kapp.dev/v1alpha1
 kind: ApplicationPlugin
 metadata:
   name: kapp-builtin-application-plugin-ingress
@@ -254,7 +314,7 @@ spec:
   pluginName:  kapp-builtin-application-plugin-ingress
   config:
     hosts:
-      - "*"
+      - "bookinfo.demo.com"
     paths:
       - "/"
     stripPath: true
