--- a/controller/config/manager/manager.yaml
+++ b/controller/config/manager/manager.yaml
@@ -30,7 +30,7 @@ spec:
           args:
             - --enable-leader-election
           image: kappstaging/controller:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: manager
           env:
             - name: ENABLE_WEBHOOKS
