--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -263,6 +263,12 @@ rules:
   - update
   - watch
 - apiGroups:
+  - metrics.k8s.io
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
   - networking.istio.io
   resources:
   - gateways
