--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
 #- bases/core.kapp.dev_dependencies.yaml
 - bases/core.kapp.dev_httpscertissuers.yaml
 - bases/core.kapp.dev_httpscerts.yaml
+- bases/core.kapp.dev_dockerregistries.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -25,6 +26,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_applicationpluginbindings.yaml
 #- patches/webhook_in_httpscertissuers.yaml
 #- patches/webhook_in_httpscerts.yaml
+#- patches/webhook_in_dockerregistries.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -37,6 +39,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_applicationpluginbindings.yaml
 #- patches/cainjection_in_httpscertissuers.yaml
 #- patches/cainjection_in_httpscerts.yaml
+#- patches/cainjection_in_dockerregistries.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
