make HttpsCert namespaced

--- a/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: HttpsCertList
     plural: httpscerts
     singular: httpscert
-  scope: Cluster
+  scope: Namespaced
   subresources:
     status: {}
   validation:
