httpscertissuer is namespaced now

--- a/controller/config/crd/bases/core.kapp.dev_httpscertissuers.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_httpscertissuers.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: HttpsCertIssuerList
     plural: httpscertissuers
     singular: httpscertissuer
-  scope: Cluster
+  scope: Namespaced
   subresources:
     status: {}
   validation:
