docker image secret distributions

--- a/controller/config/crd/bases/core.kapp.dev_dockerregistries.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_dockerregistries.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: DockerRegistryList
     plural: dockerregistries
     singular: dockerregistry
-  scope: Namespaced
+  scope: Cluster
   validation:
     openAPIV3Schema:
       description: DockerRegistry is the Schema for the dockerregistries API
