--- a/controller/config/crd/bases/core.kapp.dev_componentpluginbindings.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_componentpluginbindings.yaml
@@ -8,6 +8,25 @@ metadata:
   creationTimestamp: null
   name: componentpluginbindings.core.kapp.dev
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .spec.isDisabled
+    name: Disabled
+    type: boolean
+  - JSONPath: .spec.pluginName
+    name: Plugin
+    type: string
+  - JSONPath: .spec.componentName
+    name: Component
+    type: string
+  - JSONPath: .status.configValid
+    name: ConfigValid
+    type: boolean
+  - JSONPath: .status.configError
+    name: ConfigError
+    type: string
+  - JSONPath: .metadata.creationTimestamp
+    name: Age
+    type: date
   group: core.kapp.dev
   names:
     kind: ComponentPluginBinding
@@ -15,6 +34,7 @@ spec:
     plural: componentpluginbindings
     singular: componentpluginbinding
   scope: Namespaced
+  subresources: {}
   validation:
     openAPIV3Schema:
       description: ComponentPluginBinding is the Schema for the pluginbindings API
