--- a/controller/config/crd/bases/core.kapp.dev_applicationpluginbindings.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applicationpluginbindings.yaml
@@ -8,6 +8,22 @@ metadata:
   creationTimestamp: null
   name: applicationpluginbindings.core.kapp.dev
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .spec.isDisabled
+    name: Disabled
+    type: boolean
+  - JSONPath: .spec.pluginName
+    name: Plugin
+    type: string
+  - JSONPath: .status.configValid
+    name: ConfigValid
+    type: boolean
+  - JSONPath: .status.configError
+    name: ConfigError
+    type: string
+  - JSONPath: .metadata.creationTimestamp
+    name: Age
+    type: date
   group: core.kapp.dev
   names:
     kind: ApplicationPluginBinding
@@ -15,6 +31,7 @@ spec:
     plural: applicationpluginbindings
     singular: applicationpluginbinding
   scope: Namespaced
+  subresources: {}
   validation:
     openAPIV3Schema:
       description: ApplicationPluginBinding is the Schema for the applicationpluginbindings
