--- a/controller/config/crd/bases/core.kapp.dev_components.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_components.yaml
@@ -8,6 +8,16 @@ metadata:
   creationTimestamp: null
   name: components.core.kapp.dev
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .spec.workloadType
+    name: Workload
+    type: string
+  - JSONPath: .spec.image
+    name: Image
+    type: string
+  - JSONPath: .metadata.creationTimestamp
+    name: Age
+    type: date
   group: core.kapp.dev
   names:
     kind: Component
@@ -15,6 +25,7 @@ spec:
     plural: components
     singular: component
   scope: Namespaced
+  subresources: {}
   validation:
     openAPIV3Schema:
       description: Component is the Schema for the components API
