--- a/controller/config/crd/bases/core.kapp.dev_applicationpluginbindings.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applicationpluginbindings.yaml
@@ -31,7 +31,8 @@ spec:
     plural: applicationpluginbindings
     singular: applicationpluginbinding
   scope: Namespaced
-  subresources: {}
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: ApplicationPluginBinding is the Schema for the applicationpluginbindings
@@ -72,9 +73,6 @@ spec:
               type: string
             configValid:
               type: boolean
-          required:
-          - configError
-          - configValid
           type: object
       type: object
   version: v1alpha1
