add http route pages

--- a/controller/config/samples/core_v1alpha1_application_builtin_plugin.yaml
+++ b/controller/config/samples/core_v1alpha1_application_builtin_plugin.yaml
@@ -59,7 +59,7 @@ spec:
   config:
     hosts:
       - "demo.com"
-    httpsCert: httpscert-sample
+#    httpsCert: httpscert-sample
     paths:
       - "/abc"
       - "/"
