api for https certs
todo: upload selfmanaged https-certs

--- a/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
@@ -42,9 +42,14 @@ spec:
               type: array
             httpsCertIssuer:
               type: string
+            isSelfManaged:
+              type: boolean
+            selfManagedSecretName:
+              type: string
           required:
           - domains
           - httpsCertIssuer
+          - isSelfManaged
           type: object
         status:
           description: HttpsCertStatus defines the observed state of HttpsCert
