--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - bases/core.kapp.dev_httpscertissuers.yaml
 - bases/core.kapp.dev_httpscerts.yaml
 - bases/core.kapp.dev_dockerregistries.yaml
+- bases/core.kapp.dev_httproutes.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -27,6 +28,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_httpscertissuers.yaml
 #- patches/webhook_in_httpscerts.yaml
 #- patches/webhook_in_dockerregistries.yaml
+#- patches/webhook_in_httproutes.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -40,6 +42,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_httpscertissuers.yaml
 #- patches/cainjection_in_httpscerts.yaml
 #- patches/cainjection_in_dockerregistries.yaml
+#- patches/cainjection_in_httproutes.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
