--- a/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
@@ -44,7 +44,7 @@ spec:
               type: string
             isSelfManaged:
               type: boolean
-            selfManagedSecretName:
+            selfManagedCertSecretName:
               type: string
           required:
           - domains
