--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -268,3 +268,15 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - networking.istio.io
+  resources:
+  - gateways
+  verbs:
+  - '*'
+- apiGroups:
+  - networking.istio.io
+  resources:
+  - virtualservices
+  verbs:
+  - '*'
