make Status serious for HttpsCert

--- a/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_httpscerts.yaml
@@ -52,13 +52,29 @@ spec:
         status:
           description: HttpsCertStatus defines the observed state of HttpsCert
           properties:
-            ok:
-              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                of cluster Important: Run "make" to regenerate code after modifying
-                this file'
-              type: boolean
-          required:
-          - ok
+            conditions:
+              items:
+                properties:
+                  message:
+                    description: Message is a human readable description of the details
+                      of the last transition, complementing reason.
+                    type: string
+                  reason:
+                    description: Reason is a brief machine readable explanation for
+                      the condition's last transition.
+                    type: string
+                  status:
+                    description: Status of the condition, one of ('True', 'False',
+                      'Unknown').
+                    type: string
+                  type:
+                    description: Type of the condition, currently ('Ready').
+                    type: string
+                required:
+                - status
+                - type
+                type: object
+              type: array
           type: object
       type: object
   version: v1alpha1
