--- a/controller/config/samples/core_v1alpha1_application_kapp_dashboard.yaml
+++ b/controller/config/samples/core_v1alpha1_application_kapp_dashboard.yaml
@@ -39,13 +39,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: kapp-system
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: Application
-metadata:
-  name: kapp-system
-spec:
-  isActive: true
+  labels:
+    kapp-enabled: "true"
 ---
 apiVersion: core.kapp.dev/v1alpha1
 kind: Component
