--- a/controller/config/samples/core_v1alpha1_bookinfo.yaml
+++ b/controller/config/samples/core_v1alpha1_bookinfo.yaml
@@ -13,13 +13,7 @@ metadata:
   name: kapp-bookinfo
   labels:
     istio-injection: enabled
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: Application
-metadata:
-  name: kapp-bookinfo
-spec:
-  isActive: true
+    kapp-enabled: "true"
 ---
 ##################################################################################################
 # Details service
@@ -267,56 +261,4 @@ spec:
   config:
     port: 9080
 ---
-apiVersion: core.kapp.dev/v1alpha1
-kind: ApplicationPlugin
-metadata:
-  name: kapp-builtin-application-plugin-ingress
-spec:
-  src: |
-    function AfterApplicationSaved() {
-      __builtinApplicationPluginIngress();
-    }
-  configSchema:
-    title: Ingress rules
-    type: object
-    required:
-      - hosts
-      - paths
-    properties:
-      hosts:
-        type: array
-        items:
-          type: string
-      httpsCert:
-        type: string
-      paths:
-        type: array
-        items:
-          type: string
-      stripPath:
-        type: boolean
-      destinations:
-        type: array
-        items:
-          type: object
-          properties:
-            destination:
-              type: string
-            weight:
-              type: number
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: ApplicationPluginBinding
-metadata:
-  name: kapp-builtin-application-plugin-ingress
-  namespace: kapp-bookinfo
-spec:
-  pluginName:  kapp-builtin-application-plugin-ingress
-  config:
-    hosts:
-      - "bookinfo.demo.com"
-    paths:
-      - "/"
-    stripPath: true
-    destinations:
-      - destination: productpage:9080
+# todo routes
