--- a/controller/config/samples/core_v1alpha1_component_plugin.yaml
+++ b/controller/config/samples/core_v1alpha1_component_plugin.yaml
@@ -77,13 +77,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: test
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: Application
-metadata:
-  name: test
-spec:
-  isActive: true
+  labels:
+    kapp-enabled: "true"
 ---
 apiVersion: core.kapp.dev/v1alpha1
 kind: ComponentPluginBinding
