--- a/controller/config/samples/core_v1alpha1_configurable_component_plugin.yaml
+++ b/controller/config/samples/core_v1alpha1_configurable_component_plugin.yaml
@@ -2,13 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: kapp-test
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: Application
-metadata:
-  name: kapp-test
-spec:
-  isActive: false
+  labels:
+    kapp-enabled: "true"
 ---
 apiVersion: core.kapp.dev/v1alpha1
 kind: ComponentPlugin
