--- a/controller/config/samples/core_v1alpha1_hello-world.yaml
+++ b/controller/config/samples/core_v1alpha1_hello-world.yaml
@@ -6,13 +6,6 @@ metadata:
     istio-injection: enabled
 ---
 apiVersion: core.kapp.dev/v1alpha1
-kind: Application
-metadata:
-  name: kapp-hello-world
-spec:
-  isActive: true
----
-apiVersion: core.kapp.dev/v1alpha1
 kind: Component
 metadata:
     name: hello-world
@@ -24,55 +17,4 @@ spec:
           containerPort: 80
           servicePort: 80
 ---
-apiVersion: core.kapp.dev/v1alpha1
-kind: ApplicationPlugin
-metadata:
-  name: kapp-builtin-application-plugin-ingress
-spec:
-  src: |
-    function AfterApplicationSaved() {
-      __builtinApplicationPluginIngress();
-    }
-  configSchema:
-    title: Ingress rules
-    type: object
-    required:
-      - hosts
-      - paths
-    properties:
-      hosts:
-        type: array
-        items:
-          type: string
-      httpsCert:
-        type: string
-      paths:
-        type: array
-        items:
-          type: string
-      stripPath:
-        type: boolean
-      destinations:
-        type: array
-        items:
-          type: object
-          properties:
-            destination:
-              type: string
-            weight:
-              type: number
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: ApplicationPluginBinding
-metadata:
-  name: kapp-builtin-application-plugin-ingress
-  namespace: kapp-hello-world
-spec:
-  pluginName:  kapp-builtin-application-plugin-ingress
-  config:
-    hosts:
-      - "*"
-    paths:
-      - "/"
-    destinations:
-      - destination: hello-world:80
+# todo routes
