--- a/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
+++ b/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
@@ -4,6 +4,7 @@ metadata:
   name: kapp-hello-world
   labels:
     istio-injection: enabled
+    kapp-enabled: "true"
 ---
 apiVersion: core.kapp.dev/v1alpha1
 kind: Component
@@ -17,4 +18,22 @@ spec:
           containerPort: 80
           servicePort: 80
 ---
-# todo routes
+apiVersion: core.kapp.dev/v1alpha1
+kind: HttpRoute
+metadata:
+  name: hello-world
+  namespace: kapp-hello-world
+spec:
+  hosts:
+    - "*"
+  methods:
+    - GET
+    - POST
+  schemes:
+    - http
+  paths:
+    - /
+  destinations:
+    - host: hello-world
+      weight: 1
+  stripPath: true
