--- a/controller/config/manager/manager.yaml
+++ b/controller/config/manager/manager.yaml
@@ -3,6 +3,7 @@ kind: Namespace
 metadata:
   labels:
     control-plane: controller
+    kapp-enabled: "true"
   name: system
 ---
 apiVersion: apps/v1
