use pvc controller to manage PVC & PV

--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -16,6 +16,18 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - persistentvolumeclaims
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - secrets
   verbs:
   - create
