--- a/controller/config/crd/bases/core.kapp.dev_components.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_components.yaml
@@ -483,6 +483,8 @@ spec:
                     description: use to store pvc name, so the disk won't be recreate
                       during restart This field also can be used with existing pvc
                     type: string
+                  persistentVolumeNamePVCToMatch:
+                    type: string
                   size:
                     description: If we need to create this volume first, the size
                       of the volume
