fix bug for default ca issuer

--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -16,6 +16,30 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - persistentvolume
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - persistentvolumeclaims
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - secrets
   verbs:
   - create
