--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
+    "@types/node-forge": "^0.9.4",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.6",
@@ -34,6 +35,7 @@
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
     "material-table": "^1.57.2",
+    "node-forge": "^0.9.1",
     "notistack": "^0.9.7",
     "npm": "^6.13.7",
     "perfect-scrollbar": "^1.5.0",
