storageClass is also needed when re-using pv

--- a/controller/config/samples/core_v1alpha1_volumes.yaml
+++ b/controller/config/samples/core_v1alpha1_volumes.yaml
@@ -41,3 +41,4 @@ spec:
       type: pvc
       storageClassName: kapp-ssd
       persistentVolumeNamePVCToMatch: pvc-2a488de4-14c6-49ab-8483-dd505afe4241
+      persistentVolumeClaimName: pvc-foobar2
