seems For only works for cluster resource
 for namespaced resources, need using watch

--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -16,6 +16,14 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - nodes
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - persistentvolume
   verbs:
   - create
@@ -29,6 +37,18 @@ rules:
   - ""
   resources:
   - persistentvolumeclaims
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - persistentvolumes
   verbs:
   - create
   - delete
@@ -304,3 +324,15 @@ rules:
   - virtualservices
   verbs:
   - '*'
+- apiGroups:
+  - storage.k8s.io
+  resources:
+  - storageclasses
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
