--- a/controller/config/samples/core_v1alpha1_kapp_http_route.yaml
+++ b/controller/config/samples/core_v1alpha1_kapp_http_route.yaml
@@ -1,20 +1,20 @@
-#apiVersion: core.kapp.dev/v1alpha1
-#kind: HttpsCertIssuer
-#metadata:
-#  name: default-cert-issuer
-#spec:
-#  caForTest: {}
-#---
-#apiVersion: core.kapp.dev/v1alpha1
-#kind: HttpsCert
-#metadata:
-#  name: default-https-cert
-#spec:
-#  httpsCertIssuer: default-cert-issuer
-#  isSelfManaged: false
-#  domains:
-#    - "*"
-#---
+apiVersion: core.kapp.dev/v1alpha1
+kind: HttpsCertIssuer
+metadata:
+  name: default-cert-issuer
+spec:
+  caForTest: {}
+---
+apiVersion: core.kapp.dev/v1alpha1
+kind: HttpsCert
+metadata:
+  name: default-https-cert
+spec:
+  httpsCertIssuer: default-cert-issuer
+  isSelfManaged: false
+  domains:
+    - "*"
+---
 apiVersion: core.kapp.dev/v1alpha1
 kind: HttpsCert
 metadata:
