--- a/controller/config/samples/core_v1alpha1_hipster.yaml
+++ b/controller/config/samples/core_v1alpha1_hipster.yaml
@@ -372,7 +372,7 @@ spec:
     - path: /data
       type: emptyDir
       size: 128Mi
-  command: ["redis-server"]
+  command: redis-server
 #  args: ["/usr/local/etc/redis/redis.conf"]
 #  configs:
 #    - paths:
